@@ -1,2 +1,2 @@
-default-character-set=utf8
-default-collation=utf8_bin
+default-character-set=utf8mb4
+default-collation=utf8mb4_bin
